# auto_research

./: .gitignore  README.md  auto-research.code-workspace  kaggle.json
sync_paper/: hello.py  (+7 more)
write_paper/: README.md  download_arxiv_metadata.py  generate_multiple_papers.py  pyproject.toml  requirements.txt  setup.py  topics.yaml
write_paper/benchmarks/: README.md  run_benchmark.py
write_paper/benchmarks/configs/: default.yaml  specialized.yaml  topics.yaml
write_paper/cite_reverse-main/: cite.bib  cite_dblp.bib  cite_reverse_dblp.py
write_paper/json2bibtex/: main.py  read_tex.py  trans_bibtex.py  省人力替换.py
write_paper/result/: AI agent safety.json  How_multi_camera_multi_object_tracking_work?_survey.tex  LLM agent safety.json  What is  autonomous agent in MLLM?.json  What_is__autonomous_agent_in_MLLM?_survey.tex
write_paper/result/20250330/: Chain-of-Thought_Reasoning_in_Large_Language_Models_survey.tex  Embedding_Chunking_methods_and_evaluation_survey.tex  Few-Shot_Learning_in_Neural_Language_Models_survey.tex  How_can_Multimodal_large_language_model_and_Agent_cooperate_together?_survey.tex  Low-Rank_Adaptation_of_Large_Language_Models_survey.tex  MLLM_survey.tex  Retrieval-Augmented_Generation_for_Language_Models_survey.tex  Semantic_SLAM_survey.tex  Semantic_SLAM_with_Hydra_survey.tex  The_survey_on_Multi_Camera_Multi_Object_Tracking_survey.tex  The_survey_on_Multi_Camera_Multi_Object_Tracking_with_trajactery_and_graph_embedding_survey.tex  What_make_Embodied_with_LLM_work_survey.tex
write_paper/src/: main.py  state.py
write_paper/src/models/: paper.py
(+63 files in other folders)
