[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "write_paper"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "Auto research paper generator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "."}

[project.urls]
"Homepage" = "https://github.com/yourusername/write_paper"
"Bug Tracker" = "https://github.com/yourusername/write_paper/issues"
